more setup but had to stop because JSX transformer sends ajax request

--- a/index.html
+++ b/index.html
@@ -3,16 +3,19 @@
     <meta charset="utf-8">
     <title>React Todo App</title>
     <link rel="stylesheet" href="index.css" charset="utf-8">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.0/react.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.0/JSXTransformer.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   </head>
   <body>
     <h1>todos</h1>
-    <section id="todoapp">
+    <section id="todoApp">
     </section>
     <footer>
       <p>
         by <a href="http://github.com/phoebejhhong">Phoebe Hong</a>
       </p>
     </footer>
-    <script src="js/todoItem.js"></script>
+    <script type="text/jsx" src="js/app.jsx"></script>
   </body>
 </html>
