add footer.jsx to complete static version

--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
     </section>
     <footer>
       <p>
-        by <a href="http://github.com/phoebejhhong">Phoebe Hong</a>
+        by <a href="http://github.com/phoebejhhong" target="_blank">Phoebe Hong</a>
       </p>
     </footer>
+    <script type="text/jsx" src="js/footer.jsx"></script>
     <script type="text/jsx" src="js/app.jsx"></script>
   </body>
 </html>
