add quids to todos and ajax post request

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         by <a href="http://github.com/phoebejhhong" target="_blank">Phoebe Hong</a>
       </p>
     </footer>
+    <script src="js/utils.js"></script>
     <script type="text/jsx" src="js/footer.jsx"></script>
     <script type="text/jsx" src="js/app.jsx"></script>
   </body>
