--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     </footer>
     <script src="js/utils.js"></script>
     <script type="text/jsx" src="js/footer.jsx"></script>
+    <script type="text/jsx" src="js/todoItem.jsx"></script>
     <script type="text/jsx" src="js/app.jsx"></script>
   </body>
 </html>
