update info on the footer and README.md

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
   <head>
     <meta charset="utf-8">
-    <title>React Todo App</title>
+    <title>toodoo app</title>
     <link rel="stylesheet" href="index.css" charset="utf-8">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.0/react.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.0/JSXTransformer.js"></script>
@@ -10,9 +10,17 @@
   <body>
     <section id="todoApp">
     </section>
-    <footer>
+    <footer id="info">
       <p>
-        by <a href="http://github.com/phoebejhhong" target="_blank">Phoebe Hong</a>
+        toodoo app is a React &amp; Sinatra app by
+        <a href="http://github.com/phoebejhhong" target="_blank">Phoebe Hong</a>
+        hugely inspired by
+        <a href="http://todomvc.com" target="_blank">TodoMVC</a>
+      </p>
+      <p>
+        <a href="https://github.com/phoebejhhong/react-todo-app" target="_blank">
+          View Source
+        </a>
       </p>
     </footer>
     <script src="js/utils.js"></script>
